--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://unpkg.com/font-awesome@4.7.0/css/font-awesome.min.css");
+@import url("https://registry.npmmirror.com/font-awesome/4.7.0/files/css/font-awesome.min.css");
 
 /*
 	Aerial by HTML5 UP
